refactor(content): update content flow and file storage integration